[TR-5784] Fixes dropdown and preview button on subpanels and scrollbar width.

--- a/sugarcrm/styleguide/less/clients/base/components/list.less
+++ b/sugarcrm/styleguide/less/clients/base/components/list.less
@@ -12,7 +12,8 @@ a.preview-list-item:hover {
   width: 64.6%;
   bottom: 44px;
   left: 0;
-  z-index: 11;
+  height: 16px;
+  z-index: @zindexDropdown;
   &.dash-collapsed {
     width: 98.6%;
   }
